<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#FFFFFF">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:rowCount="3">

        <EditText
            android:id="@+id/gpaInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/cancelButton"
            app:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/saveButton"
            app:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New GPA"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="0" />

    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>